// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autoLogOp and toMiddleware logs meta from previous middleware correctly 1`] = `
Object {
  "operation": "operationFunction",
  "transactionId": "xxxx-xxxx",
}
`;

exports[`autoLogOp and toMiddleware logs meta from previous middleware correctly 2`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
      "transactionId": "xxxx-xxxx",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
      "transactionId": "xxxx-xxxx",
    },
  ],
]
`;

exports[`autoLogOp logs operation correctly with autoLogAction when failure of async function 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`autoLogOp logs operation correctly with autoLogAction when failure of async function 2`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "Not Found",
      "operation": "operationFunction",
      "result": "failure",
      "status": 404,
    },
  ],
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "Not Found",
      "operation": "operationFunction",
      "result": "failure",
      "status": 404,
    },
  ],
]
`;

exports[`autoLogOp logs operation correctly with autoLogAction when failure of async function 3`] = `Array []`;

exports[`autoLogOp logs operation correctly with autoLogAction when failure of non-async function 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`autoLogOp logs operation correctly with autoLogAction when failure of non-async function 2`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "Not Found",
      "operation": "operationFunction",
      "result": "failure",
      "status": 404,
    },
  ],
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "Not Found",
      "operation": "operationFunction",
      "result": "failure",
      "status": 404,
    },
  ],
]
`;

exports[`autoLogOp logs operation correctly with autoLogAction when failure of non-async function 3`] = `Array []`;

exports[`autoLogOp logs operation correctly with autoLogAction when success of async function with async sub actions 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOp logs operation correctly with autoLogAction when success of non-async function with non async sub actions 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOps decorate each method correctly 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunctionA",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionA",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOps set anonymous function names as per property name correctly 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunctionA",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionA",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOpsToMiddlewares decorate each method correctly 1`] = `
Object {
  "operation": "operationFunctionA",
}
`;

exports[`autoLogOpsToMiddlewares decorate each method correctly 2`] = `
Object {
  "operation": "operationFunctionB",
}
`;

exports[`autoLogOpsToMiddlewares decorate each method correctly 3`] = `
Array [
  Array [
    Object {
      "operation": "operationFunctionA",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionA",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOpsToMiddlewares log serial middleware in correct order for non-async function failure 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunctionA",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionA",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
    },
  ],
]
`;

exports[`autoLogOpsToMiddlewares log serial middleware in correct order for non-async function failure 2`] = `
Array [
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "Not Found",
      "operation": "operationFunctionB",
      "result": "failure",
      "status": 404,
    },
  ],
]
`;

exports[`autoLogOpsToMiddlewares log serial middleware in correct order for non-async functions success 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunctionA",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionA",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionC",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionC",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOpsToMiddlewares set anonymous function names as per property name correctly 1`] = `
Object {
  "operation": "operationFunctionA",
}
`;

exports[`autoLogOpsToMiddlewares set anonymous function names as per property name correctly 2`] = `
Object {
  "operation": "operationFunctionB",
}
`;

exports[`autoLogOpsToMiddlewares set anonymous function names as per property name correctly 3`] = `
Array [
  Array [
    Object {
      "operation": "operationFunctionA",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionA",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionB",
      "result": "success",
    },
  ],
]
`;

exports[`toMiddleware handle the thrown error correctly of async function not calling res 1`] = `
Array [
  Array [
    Object {
      "message": "Not Found",
      "status": 404,
    },
  ],
]
`;

exports[`toMiddleware handle the thrown error correctly of non-async function not calling res 1`] = `
Array [
  Array [
    Object {
      "message": "Not Found",
      "status": 404,
    },
  ],
]
`;

exports[`toMiddleware triggers autoLogOp enhanced operation function correctly of failure of async function 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`toMiddleware triggers autoLogOp enhanced operation function correctly of failure of async function 2`] = `Array []`;

exports[`toMiddleware triggers autoLogOp enhanced operation function correctly of failure of async function 3`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
]
`;

exports[`toMiddleware triggers autoLogOp enhanced operation function correctly of failure of non-async function 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`toMiddleware triggers autoLogOp enhanced operation function correctly of failure of non-async function 2`] = `Array []`;

exports[`toMiddleware triggers autoLogOp enhanced operation function correctly of failure of non-async function 3`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
]
`;

exports[`toMiddleware triggers autoLogOp enhanced operation function correctly of success async function with async sub actions 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;

exports[`toMiddleware triggers autoLogOp enhanced operation function correctly of success non-async function with non-async sub actions 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;
